# gen12_strategy

./: .gitignore  README.md
ArraySim/: README.md  SolarCellLibrary.slx  generate_bypass_diode_model.m  slblocks.m  string_layout.json
ArraySim/A/: readme.txt
ArraySim/A/Run/: SolarAzEl.m  dayAzElIrr.m
ArraySim/B/: readme.txt
ArraySim/B/Run/: area_of_nsided_convex_polygon.m  area_of_triangle.m  cMake.m  calculate_rays.m  cellData.m  cellIrrTable.m  centerArrayAndCanopy.m  create_sun_plane.m  create_sun_vector_simple.m  dayCellIrr.m  discpowTab.m  energyLoss.m  fastPowTab.m  findRolRes.m  funcsHandle.m  main.asv  main.m  mat2strcCells.m  mpptSim.m  opcodemeshmex.mexw64  order_vertices.m  plotArrayCanopy.m  project_onto_sun_vector.m  remShadCellStruc.m  rem_shaded_triangles_plot.m  remove_inner_points.m  remove_shaded_triangles.m  return_areas.m  saveMat.m  solarEnergy.m  solarPower.m  sortcellSheet.m  stlSlimVerts.m  stlread1.m  stlread2.m  toStrings.m  totalPower.m  varSweep.m  visualize_irradiance.mlapp  wscAngles.csv  (+1 more)
ArraySim/B/Run/ArraySTLs/: NA(1).stl  NA(10).stl  NA(100).stl  NA(101).stl  NA(102).stl  NA(103).stl  NA(104).stl  NA(105).stl  NA(106).stl  NA(107).stl  NA(108).stl  NA(109).stl  NA(11).stl  NA(110).stl  NA(111).stl  NA(112).stl  NA(113).stl  NA(114).stl  NA(115).stl  NA(116).stl  NA(117).stl  NA(118).stl  NA(119).stl  NA(12).stl  NA(120).stl  NA(121).stl  NA(122).stl  NA(123).stl  NA(124).stl  NA(125).stl  NA(126).stl  NA(127).stl  NA(128).stl  NA(129).stl  NA(13).stl  NA(130).stl  NA(131).stl  NA(132).stl  NA(133).stl  NA(134).stl  (+219 more)
ArraySim/B/Run/archived_functions/: SolarAzEl.m  findBear.m  obtainArea.m  point_in_triangle.m  powerTable.m
ArraySim/B/Run/src_matlab/: mexall.m
ArraySim/BypassDiodeSim/: SolarCellLibrary.slx  generate_bypass_diode_model.m
ArraySim/BypassDiodeSim/GenerateModel/: String1_Diode_P.slx  String2_Diode_P.slx  String3_Diode_P.slx  generate_bypass_diode_model.m
ArraySim/BypassDiodeSim/Run/: extract_results.m  main.m  process_results.m
ArraySim/BypassDiodeSim/Run/3W_2_Run/: ThreeWheel_2_String1_Diode.slx  ThreeWheel_2_String2_Diode.slx  ThreeWheel_2_String3_Diode.slx  dayPower.m  storeuData.m  totPower.m
ArraySim/BypassDiodeSim/Run/Borealis_Run/: WSC_2023_Final_PVArray_Diode_String_1.slx  WSC_2023_Final_PVArray_Diode_String_2.slx  WSC_2023_Final_PVArray_Diode_String_3.slx  string_layout.json  totPower.m
ArraySim/BypassDiodeSim/Run/CV1_Run/: String1_Diode.slx  totPower.m  (+3 more)
ArraySim/C/: readme.txt
ArraySim/C/Run/: multiRun.m
ArraySim/D/: interpolate.mlx
ArraySim/D/Run/: accumulateDayPows.m  createFolders.m  multiRun.m
ArraySim/GetCellIrradiance/: cStructure.m  import_canopy_array_stl.m  main.m  opcodemeshmex.mexw64  project_onto_sun_plane.m  remShadCellStruc.m  remove_shaded_triangles.m  solarPower.m  visualize_irradiance.mlapp  wscIrr.csv  wscIrr2.csv
ArraySim/GetCellIrradiance/Borealis/: string_layout_borealis.json
ArraySim/GetCellIrradiance/archived_functions/: batteryCharge.m  dayAzElIrr.m  dayPower.m  import_stl_fast.m  shading.m  storeCellTab.m  storeuData.m  updateTime.m
ArraySim/GetSunPosition/: dayAzElIrr.py  solcast_data.json  solcast_keys.json  sun_position.csv
ArraySim/layouts/: 3W_2.json  3W_3.json  3W_4.json  CV2_string_layout.json  borealis_string_layout.json
ArraySim/results/: diode_sim.csv  sun_position.csv
ArraySim/results/Borealis/: wscIrr.csv
ArraySim/results/CV2/: wscIrr.csv
RaceSim/: CMakeLists.txt  README.md
RaceSim/config/: wsc_config.xml
RaceSim/data/config/: wsc_config.xml  wsc_config.yaml
RaceSim/data/luts/wsc_2023/dynamic/: wind_direction_10m.csv  wind_speed_10m.csv
RaceSim/data/luts/wsc_2023/static/: GunPointTesting.csv  GunPointTesting_spaced.csv  ascPowerFactor.csv  baseroute_nonspaced.csv  cda.csv  drivingeff.csv  longDistanceSpeedlimit.csv  longDistanceTrafficSignals.csv  nonInterpolatedFactors.csv  regeneff.csv
RaceSim/include/: Globals.h  Luts.h  base_car.h  base_opt.h  config.h  geography.h  opt_factory.h  route.h  sim.h  units.h  utilities.h  v1_car.h
RaceSim/include/config/: config.h  config_param.h
RaceSim/include/model/: base_car.h  car_factory.h  v1_car.h
RaceSim/include/opt/: base_opt.h  opt_factory.h  v1_opt.h
RaceSim/include/route/: route.h
RaceSim/include/sim/: sim.h
RaceSim/include/utils/: Luts.h  custom_time.h  geography.h  units.h  utilities.h
RaceSim/libs/date/: CMakeLists.txt
RaceSim/libs/pugixml/: CMakeLists.txt
RaceSim/luts/wsc_2023/dynamic/: dhi.csv
RaceSim/luts/wsc_2023/static/: Testing_Oct_2nd_new.csv  baseroute.csv  batteff.csv  cumulativeSimulinkOut.csv  powerfactor.csv  rr1.csv  rr2.csv  solcast_test.csv  testingRoute.csv
RaceSim/scripts/: control_stop.py  interpret_array_power.py  interpret_motor_power.py  map_coords.py  plot_sim_result.m  space_route.py
RaceSim/src/: EffLut.cpp  Luts.cpp  config.cpp  geography.cpp  main.cpp  time.cpp  units.cpp  utilities.cpp
RaceSim/src/config/: config.cpp
RaceSim/src/model/: base_car.cpp  car_factory.cpp  v1_car.cpp
RaceSim/src/optimizer/: base_opt.cpp  opt_factory.cpp  v1_opt.cpp
RaceSim/src/route/: route.cpp
RaceSim/src/simulation/: sim.cpp
RaceSim/src/utils/: Luts.cpp  custom_time.cpp  geography.cpp  units.cpp  utilities.cpp
RaceSim/tests/: GeographyTest.cpp  TimeTest.cpp
Telemetry/: README.md
Telemetry/analysis/: calc_results.py  extract.py  influx.py
(+50 files in other folders)
